Fix spacing and height issues with display, add highlight all option and default to off for better performance

--- a/src/css/ansi.scss
+++ b/src/css/ansi.scss
@@ -46,12 +46,15 @@
 .line {
     word-wrap: break-word;
     word-break: break-all;
-    width: 100%;
+    /*width: 100%;*/
     /*display: block;*/
-    padding-bottom: 1px;
+    display:inline-block;
+    /*padding-bottom: 1px;*/
+    box-sizing: border-box;
     clear: both;
     line-height: normal;
     white-space: pre;
+    min-width: 100%;
 }
 
 .line hr {
