--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -122,7 +122,7 @@ body {
     width: auto;
     font-family: "Courier New", monospace;
     font-size: 1em;
-    border: 1px solid #d7d7d7;
+    border-bottom: 1px solid #d7d7d7;
     top: -100px;
     left: -100px;
     margin: 0px;
